# search_system

./: .gitignore  _make_471_concrete.py  pyproject.toml  requirements.txt  test_q.md  ~$業會議記錄為例之結構化文件解析與 GraphRAG 檢索系統_0623_第五章完成.docx  以企業會議記錄為例之結構化文件解析與 GraphRAG 檢索系統_0623.docx  以企業會議記錄為例之結構化文件解析與 GraphRAG 檢索系統_0623_第五章完成.docx  以企業會議記錄為例之結構化文件解析與 GraphRAG 檢索系統_0623_第五章完成_v2.docx  前三章.docx
Qdrant-Neo4j-Ollama-Graph-Rag/: .gitignore  graph_rag.py  main.py  test.txt  test1.txt  test2.txt
Qdrant-Neo4j-Ollama-Graph-Rag/processors/: ollama_processor.py  openai_processor.py
apps/: item_status.py
apps/documents/: mongo.py  services.py  tests.py  tests_integration.py  urls.py  validators.py  views.py
apps/graph/: apps.py  cypher_queries.py  graph_builder.py  graph_search.py  intent.py  keyword_extractor.py  neo4j_client.py  query_planner.py  semantic_extractor.py  services.py  tests.py  tests_deidentify.py  text2cypher.py  urls.py  views.py
apps/graphrag/: __init__.py  apps.py  deterministic.py  evaluation.py  query_router.py  services.py  tests.py  urls.py  views.py
apps/meetings/: __init__.py  mongo.py  services.py  tests.py  urls.py  views.py
apps/parser/: meeting_minutes_parser.py  pdf_text_extractor.py
apps/privacy/: deidentification.py  tests.py
apps/search/: __init__.py  apps.py  feedback.py  highlighter.py  mongo.py  ranking.py  (+6 more)
config/: settings.py  urls.py
docs/: graphrag_evaluation_workflow.md  graphrag_retrieval_modes.md  search_scoring_rules.md
templates/: base_console.html  documents.html  graphrag.html  index.html  meetings.html  search.html
(+21 files in other folders)
