[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2",
    "djangorestframework>=3.16",
    "pymongo>=4.13",
    "python-dotenv>=1.1",
    "neo4j>=6.2.0",
    "pymupdf>=1.27.2.3",
    "qdrant-client>=1.14.0",
    "requests>=2.32.0",
    "jieba>=0.42.1",
]
